--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   "dependencies": {
     "@astrojs/preact": "^2.1.0",
     "@astrojs/rss": "^2.3.2",
+    "@astrojs/tailwind": "^3.1.1",
     "astro": "^2.3.1",
-    "preact": "^10.13.2"
+    "preact": "^10.13.2",
+    "tailwindcss": "^3.3.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
