--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/tailwind": "^3.1.1",
     "astro": "^2.3.1",
     "preact": "^10.13.2",
+    "sass": "^1.62.1",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
