--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/preact": "^2.1.0",
     "@astrojs/rss": "^2.3.2",
     "@astrojs/tailwind": "^3.1.1",
+    "@astropub/md": "^0.2.0",
     "astro": "^2.3.1",
     "preact": "^10.13.2",
     "sass": "^1.62.1",
